--- a/client/index.html
+++ b/client/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8" />
-    <title>OpenAI Realtime Console</title>
-    <meta name="description" content="OpenAI Realtime Console" />
+    <title>SCRIBBLER Live</title>
+    <meta name="description" content="SCRIBBLER Live" />
     <meta name="author" content="OpenAI" />
     <link rel="icon" href="/assets/openai-logomark.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
